v1.3/advanced-and-troubleshooting/security/overview.md
# Overview

This page serves as an overview of the Obol Network from a security point of view.

This page is updated quarterly. The last update was on 2024-June-19.

## Table of Contents

* [Overview](overview.md)
  * [Table of Contents](overview.md#table-of-contents)
  * [List of Security Audits and Assessments](overview.md#list-of-security-audits-and-assessments)
  * [Security focused documents](overview.md#security-focused-documents)
  * [Bug Bounty](overview.md#bug-bounty)

## List of Security Audits and Assessments

The completed audits reports are linked [here](https://github.com/ObolNetwork/obol-security/tree/main/audits).

* A review of Obol Labs [development processes](./ev-assessment.md) by [Ethereal Ventures](https://www.etherealventures.com/).
* A [security assessment](https://github.com/ObolNetwork/obol-security/blob/f9d7b0ad0bb8897f74ccb34cd4bd83012ad1d2b5/audits/Sigma_Prime_Obol_Network_Charon_Security_Assessment_Report_v2_1.pdf) of Charon by [Sigma Prime](https://sigmaprime.io/) resulting in version [`v0.16.0`](https://github.com/ObolNetwork/charon/releases/tag/v0.16.0).
* A second [assessment of Charon](https://obol.tech/charon_quantstamp_assessment.pdf) by [QuantStamp](https://quantstamp.com/) resulting in version [`v0.19.1`](https://github.com/ObolNetwork/charon/releases/tag/v0.19.1).
* A [solidity audit](./smart-contract-audit.md) of the Obol Splits contracts by [Zach Obront](https://zachobront.com/).
* A [penetration testing certificate](https://github.com/ObolNetwork/obol-security/blob/main/audits/Sayfer_2024-03_Penetration_Testing_CFD.pdf) of the Obol DV Launchpad by [Sayfer](https://sayfer.io/).

## Security focused documents

* A [threat model](./threat_model.md) for a DV middleware client like Charon.

## Bug Bounty

Information related to disclosing bugs and vulnerabilities to Obol can be found on [the next page](bug-bounty.md).
